--- a/css/cloudant.css
+++ b/css/cloudant.css
@@ -40,7 +40,7 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #000;
-  font-family: "League Gothic", Impact, sans-serif;
+  /*font-family: "League Gothic", Impact, sans-serif;*/
   line-height: 0.9em;
   letter-spacing: 0.02em;
   text-transform: uppercase;
