Match V3 of slide deck

--- a/css/cloudant.css
+++ b/css/cloudant.css
@@ -168,4 +168,10 @@ body {
 * NOTICE
 *********************************************/
 .reveal #notice {
-  font-size: 0.35em}
+  font-size: 0.35em }
+
+  /*********************************************
+  * NOTICE
+  *********************************************/
+  .reveal #use-cases img {
+    width: 150px; }
