--- a/css/cloudant.css
+++ b/css/cloudant.css
@@ -45,6 +45,9 @@ body {
   letter-spacing: 0.02em;
   text-transform: uppercase;
   text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
   hyphens: none; }
 
 /*********************************************
